v3, diseño casi terminado por completo y sistema responsive terminado, sólo falta arreglar una imagen en la sección de Who I am

--- a/css/main.scss
+++ b/css/main.scss
@@ -9,7 +9,7 @@ html {
 }
 body {
     width: 90%;
-    max-width: 1100px;
+    max-width: 1300px;
     margin: 10px auto;
 
     display: grid;
@@ -29,4 +29,5 @@ body {
 @import 'main';
 @import 'aside';
 @import 'footer';
+@import 'mediaqueries';
 //Estilo de texto
