--- a/css/_main.scss
+++ b/css/_main.scss
@@ -42,10 +42,6 @@ main {
     padding: 1.3rem;
 }
 .home__container--1 {
-    h2 {
-        font-size: 1.8rem;
-        margin-bottom: 1rem;
-    }
     p {
         font-size: 1.4rem;
         line-height: 2.2rem;
@@ -59,6 +55,8 @@ main {
     a {
         font-size: 1.5rem;
         color: white;
+        display: block;
+        margin-top: 0.2rem;
     }
 }
 .section-images {
