--- a/css/main.css
+++ b/css/main.css
@@ -12,7 +12,7 @@ html {
 
 body {
   width: 90%;
-  max-width: 1100px;
+  max-width: 1300px;
   margin: 10px auto;
   display: -ms-grid;
   display: grid;
@@ -130,11 +130,6 @@ main {
   padding: 1.3rem;
 }
 
-.home__container--1 h2 {
-  font-size: 1.8rem;
-  margin-bottom: 1rem;
-}
-
 .home__container--1 p {
   font-size: 1.4rem;
   line-height: 2.2rem;
@@ -148,6 +143,8 @@ main {
 .home__investigations a {
   font-size: 1.5rem;
   color: white;
+  display: block;
+  margin-top: 0.2rem;
 }
 
 .section-images {
@@ -271,5 +268,127 @@ footer p {
   font-size: 2rem;
   color: white;
   text-align: center;
+}
+
+@media screen and (min-width: 600px) {
+  .home__container--1 {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    -ms-grid-rows: (auto)[3];
+        grid-template-rows: repeat(3, auto);
+    gap: 7px;
+  }
+  .home__container--1 h2 {
+    grid-column: 1 / -1;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+    margin-bottom: 10px;
+  }
+  .home__container--1 .home__container--1-figure {
+    grid-column: 3 / -1;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+  }
+  .home__container--1 .home__container--1-figure img {
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+    max-height: 150px;
+  }
+  .home__container--1 .home__container--1-figure-2 {
+    grid-column: 3 / -1;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3 / 4;
+    margin: 0;
+  }
+  .home__container--1 .home__container--1-figure-2 img {
+    width: 100%;
+    max-width: 600px;
+    height: 100%;
+    max-height: 150px;
+  }
+  .home__container--1 p {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / 3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+  }
+  .home__container--1 .home__investigations {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 2;
+    grid-column: 1 / span 2;
+  }
+}
+
+@media screen and (min-width: 760px) {
+  header {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .nav nav ul li {
+    display: inline-block;
+  }
+  .nav nav ul li a {
+    display: inline-block;
+    margin-left: 0.8rem;
+  }
+  .nav nav ul li a:hover {
+    text-decoration: underline;
+  }
+  .me {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+    -ms-grid-rows: (auto)[2];
+        grid-template-rows: repeat(2, auto);
+  }
+  .me .me__subtitle {
+    grid-column: 1 / -1;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1 / 2;
+  }
+  .me .me__image {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1 / 2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+    margin-right: 1.5rem;
+  }
+  .me .me__text {
+    grid-column: 2 / -1;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2 / 3;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  header {
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    padding: 2rem;
+  }
+  .fondo__principal {
+    height: 100vh;
+  }
+  .line-1 {
+    display: none;
+  }
 }
 /*# sourceMappingURL=main.css.map */
